# Quiz-app_fastapi

./: .coverage  .gitignore  .vercelignore  README.md  auth.py  db.py  locustfile.py  main.py  pyproject.toml  requirements.txt  run_pytest_with_coverage.py  run_uv.sh  test.db  vercel.json
routes/: ai_routes.py  auth_routes.py  dashboard_routes.py  decks_routes.py  media_routes.py  test_routes.py
scripts/: reset_db.py
tests/: conftest.py  test_ai_routes.py  test_ai_routes_edges.py  test_ai_routes_more.py  test_api.py  test_auth.py  test_auth_routes.py  test_dashboard_coverage.py  test_deck_private_access.py  test_decks_errors.py  test_decks_more_coverage.py  test_decks_routes.py  test_decks_update_edges.py  test_decks_visibility_api.py  test_likes_and_ordering.py  test_media_routes.py  test_test_routes_coverage.py
utils/: ai_plan.py
