[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sriram Murugesan", email = "srirammurugesan@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "pytest",
    "pytest-cov",
    "httpx",
    "python-multipart",
    "locust",
    "psycopg2-binary>=2.9.10",
    "google-generativeai>=0.8.5",
    "python-dateutil>=2.9.0.post0",
]

[tool.coverage.run]
omit = ["locustfile.py"]
